Fixed raycaster being obstructed by invisible UI elements

--- a/static/pages/game/main.css
+++ b/static/pages/game/main.css
@@ -281,6 +281,7 @@ body {
     align-items: flex-end;
     justify-content: flex-start;
     /* background-color: #0000007F; */
+    pointer-events: none;
 }
 
 #ui-top-container {
@@ -293,6 +294,7 @@ body {
     flex-direction: row;
     align-content: flex-start;
     justify-content: space-between;
+    pointer-events: none;
 }
 
 /* #endregion */
@@ -309,6 +311,10 @@ body {
     flex-direction: row;
     align-items: flex-end;
     justify-content: flex-start;
+}
+
+#ui-bottom-panel>* {
+    pointer-events: all;
 }
 
 #ui-minimap {
@@ -441,6 +447,10 @@ body {
     flex-direction: row;
     align-items: flex-end;
     justify-content: space-between;
+}
+
+#ui-top-left-panel * {
+    pointer-events: all;
 }
 
 #ui-chat-open {
